Checked through response with Yashar

--- a/ms.tex
+++ b/ms.tex
@@ -156,18 +156,50 @@ As seen in Figure \ref{fig:3}, and as pointed out by \citet{Keeton:03}, plausibl
 \centering
 \end{center}
 \vspace{-1mm}
-\caption{\blue{The two top panels show the magnification cross-sections of two sources with different sizes (left: 100 pc, right 500 pc in radius) behind a lens containing a black hole with a mass of $1\times 10^8 M_{\odot}$. The magnification at the central regions of the left panel approaches zero and the central image does not form (the color scale has been clipped at $10^{-2.5}$). The lower panel shows the magnification at the center (when the source is perfectly behind the lens) as a function of source size).}
+\caption{\blue{The two top panels show the source plane magnification 
+maps for two sources, with different sizes (left: 100 pc, 
+right 500 pc in radius) behind a lens containing a black hole with 
+a mass of $1\times 10^8 M_{\odot}$. The magnification at the 
+central regions of the left panel approaches zero and the central 
+image does not form (the color scale has been clipped at 
+$10^{-2.5}$). The lower panel shows the magnification at the center 
+(when the source is perfectly behind the lens) as a function of 
+source size).}
 \label{figMu}}
 \vspace{-1.5mm}
 \end{figure}
 
 
-We also find that the detection significance of the central images can significantly \emph{increase} for an extended source with a radius of 1 kpc compared to a point source. Since extended sources occupy a larger area of the source plane, which may cover regions with higher magnifications, the resulting flux can be larger than the flux of more compact sources. 
-The solid blue curve in Figure \ref{fig:3} shows the increase in the flux of the demagnified image for a larger source (with a radius of 1 kpc). In contrast, the flux of a source with a radius of 250 pc can be severely supressed (dotted grey curve). 
-\blue{This effect is illustrated in Figure \ref{figMu} where the effects of source size on magnification are shown. The two top panels of Figure \ref{figMu} show the magnification cross-section (flux magnification as a function of source position behind the lens) for two sources with different sizes (left: 100 pc, right: 500 pc in radius). For a compact source (top left panel) in the central regions the magnification approaches zero and the central image does not form. For more extended sources, however, even when the source is exactly behind the lens, the large extent of the source allows covering higher magnification regions, increasing the total flux magnification.
-The bottom panel shows the magnification as a function of source size, for a source that is located on the lens axis.}
-As the source galaxies are undergoing prodigious star formation, these large source sizes are reasonable and in agreement with observations \citep{hezaveh:13b}.
-More extended and intrinsically brighter emission lines such as C[II], the brightest molecular line in high redshift galaxies, may therefore be the most ideal targets for such observations.
+We also find that the detection significance of the central images 
+can significantly \emph{increase} for an extended source with a 
+radius of 1 kpc compared to a point source. Since extended sources 
+occupy a larger area of the source plane, which may cover regions 
+with higher magnifications, the resulting flux can be larger than 
+the flux of more compact sources.
+
+The solid blue curve in Figure \ref{fig:3} shows the increase in 
+the flux of the demagnified image for a larger source (with a 
+radius of 1 kpc). In contrast, the flux of a source with a radius 
+of 250 pc can be severely supressed (dotted grey curve). \blue{This 
+effect is illustrated in Figure \ref{figMu} where the effects of 
+source size on magnification are shown. The two top panels of 
+Figure~\ref{figMu} show the source plane magnification (flux 
+magnification as a function of source position behind the lens) for 
+two sources with different sizes (left: 100 pc, right: 500 pc in 
+radius). For a compact source (top left panel) in the central 
+regions the magnification approaches zero and the central image 
+does not form. For more extended sources, however, even when the 
+source is exactly behind the lens, the large extent of the source 
+allows covering higher magnification regions, increasing the total 
+flux magnification.
+The bottom panel shows the magnification as a function of source 
+size, for a source that is located on the lens axis.}
+As the source galaxies are undergoing prodigious star formation, 
+these large source sizes are reasonable and in agreement with 
+observations \citep{hezaveh:13b}.
+More extended and intrinsically brighter emission lines such as 
+C[II], the brightest molecular line in high redshift galaxies, may 
+therefore be the most ideal targets for such observations.
 
 \begin{figure}
 \begin{center}
