final revisions for resubmission

--- a/ms.tex
+++ b/ms.tex
@@ -53,7 +53,7 @@ Previous studies have shown that the core sizes in these galaxies scale with the
 
 
 Strong gravitational lensing is a powerful tool for probing the matter distribution in distant galaxies. Among other things, strong lenses have been used to constrain galaxy masses, density profiles, and abundance of dark matter subhalos \citep[e.g.,][]{dalal:02, Gavazzi:07, Bolton:08}. For double and quad image configurations, the theory of strong lensing predicts a third and a fifth image near the centers of lensing galaxies. 
-\blue{Realistic galaxy density profiles produce central images that are almost always \emph{demagnified}\footnote{approximately as $(\Sigma/\Sigma_{crit})^{-2}$, where $\Sigma$ is the surface density and $\Sigma_{crit}$ is the critical surface density}, making their detection difficult \citep[e.g.,][]{Jackson:13}. If the lens galaxies have cuspy central profiles with steep slopes or very massive SMBHs, this central image may not form at all.}  
+\blue{However, realistic galaxy density profiles produce central images that are almost always \emph{demagnified}\footnote{approximately as $(\Sigma/\Sigma_{crit})^{-2}$, where $\Sigma$ is the surface density and $\Sigma_{crit}$ is the critical surface density}, making their detection difficult \citep[e.g.,][]{Jackson:13}. If the lens galaxies have cuspy central profiles with steep slopes or very massive SMBHs, this central image may not form at all.}  
 %\red{Unlike the other lensed images, which are magnified, this image can be significantly \emph{demagnified}, making its detection difficult \citep[e.g.,][]{Jackson:13}.}
  It is well-understood that the magnification of the central images is very sensitive to the matter distribution in the innermost regions of lens galaxies: very steep density profiles significantly demagnify the central images, whereas cored or shallow profiles render them brighter (Figure \ref{fig1}). 
 
@@ -106,7 +106,10 @@ We generated lensed images of background sources, predicted ALMA visibilities, a
 
 We modeled the lens potential as a sum of three components: dark matter, stellar population and a single central SMBH. The dark matter component was modeled as \blue{an elliptical} singular power-law with a slope of 0.1, in agreement with the projected surface mass density of the NFW profile in the innermost regions \citep{Golse:02}. As  pointed out by \citet{Keeton:03}, due to its expected flatness in these regimes, the dark matter component has negligible influence on the central images (although models with dark matter cusps have been entertained). 
 The stellar population is modeled as \blue{an elliptical} cored power-law, $\Sigma(r)\propto (r^2+R_{\mathrm{core}}^2)^{\gamma_s}$. \blue{The deflection angles for elliptical cored power-law models were calculated using FastEll \citep{Barkana:98}.}  Figure \ref{fig2} shows the stellar component (red curve), dark matter component (black dashed curve) and the sum of the two (black solid curve). The grey dashed curves show a few examples of core-sersic models with parameters taken from \citet{Ferrarese:06}. Although the cored power-law model used in this work does not account for the slope of the stellar distribution below the core break, it is a close fit and a reasonable model to approximate the observed stellar light profiles in the inner few kpc. 
-The black hole was modeled as a simple point mass at the center of the potential. We assumed that all the three components are concentric, though we note that two- and three-black hole interactions may invalidate this assumption.
+The black hole was modeled as a simple point mass at the center of the potential. 
+\blue{Lensing galaxies are typically massive ellipticals with velocity dispersions of order 200 km/s \citep[e.g.,][]{Sonnenfeld:13}. From the M-$\sigma$ relation, we predict that these galaxies should contain black holes with masses in excess of $2\times10^8 M_{\odot}$ \citep[e.g.,][]{Kormendy:13}. In our simulations we have chosen black holes with masses of 1, 2, and $4 \times 10^8 M_{\odot}$.}
+
+We assumed that all the three components are concentric, though we note that two- and three-black hole interactions may invalidate this assumption.
 The stellar and dark mass of the lens were normalized such that they each contain $1.5\times10^{11} M_{\odot}$ in a radius of 10 kpc. The resulting Einstein radius is of order 1 arcsec, in agreement with galaxy-galaxy strong lenses \citep[e.g.,][]{hezaveh:13b}.
 To predict the visibilities, we calculated the ALMA $uv$-coverage of a 10-$hr$ long observation (full array), using the $simobserve$ task of Common Astronomy Software Applications package, for an observing frequency of 150 GHz. 
 The model visibilities were calculated by computing the 2D Fourier transform of the surface brightness data maps and resampling the Fourier transform maps over the $uv$-coverage. 
@@ -127,7 +130,7 @@ We used finite differencing of visibilities to calculate the gradients, and marg
 \centering
 \end{center}
 \caption{ Detection significance of a central image, as a function of the stellar core size for a 10-hr long ALMA observation. 
-The fiducial model (solid black curve) corresponds to $\gamma_{stellar}=1.0$, $M_{\mathrm{BH}}=2\times10^8 M_{\odot}$, and a source size of 500 pc (radius). The dashed black curve shows the detection significance when the SMBH is removed and the solid red curve shows the effect of a steeper density profile ($\gamma_{\mathrm{stellar}}=1.1$). The solid blue and gray dotted curves show the detections for a source with a radius of 1 kpc and 250 pc respectively. 
+The fiducial model (solid black curve) corresponds to $\gamma_{stellar}=1.0$, $M_{\mathrm{BH}}=2\times10^8 M_{\odot}$, and a source size of 500 pc (radius). \blue{The lens has an ellipticity of 0.2.} The dashed black curve shows the detection significance when the SMBH is removed and the solid red curve shows the effect of a steeper density profile ($\gamma_{\mathrm{stellar}}=1.1$). The solid blue and gray dotted curves show the detections for a source with a radius of 1 kpc and 250 pc respectively. 
 \label{fig:3}}
 \end{figure}
 
