--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,22 @@
+@ARTICLE{Sonnenfeld:13,
+   author = {{Sonnenfeld}, A. and {Treu}, T. and {Gavazzi}, R. and {Suyu}, S.~H. and 
+	{Marshall}, P.~J. and {Auger}, M.~W. and {Nipoti}, C.},
+    title = "{The SL2S Galaxy-scale Lens Sample. IV. The Dependence of the Total Mass Density Profile of Early-type Galaxies on Redshift, Stellar Mass, and Size}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {1307.4759},
+ primaryClass = "astro-ph.CO",
+ keywords = {galaxies: elliptical and lenticular, cD, galaxies: evolution, gravitational lensing: strong},
+     year = 2013,
+    month = nov,
+   volume = 777,
+      eid = {98},
+    pages = {98},
+      doi = {10.1088/0004-637X/777/2/98},
+   adsurl = {http://adsabs.harvard.edu/abs/2013ApJ...777...98S},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @ARTICLE{Barkana:98,
    author = {{Barkana}, R.},
     title = "{Fast Calculation of a Family of Elliptical Mass Gravitational Lens Models}",
