final revisions for resubmission

--- a/ms.tex
+++ b/ms.tex
@@ -30,14 +30,17 @@ molecular emission lines with ALMA. We model the lensing galaxies
 as a superposition of a dark matter component, a stellar component, 
 and a central supermassive black hole and assess the detectability 
 of the central images for a range of relevant parameters (e.g., 
-stellar core and black hole mass). We find that over a large range 
+stellar core, black hole mass, and source size). 
+We find that over a large range 
 of plausible parameters, future deep observations of lensed 
 molecular lines with ALMA should enable detection of the central 
-images at $\gtrsim 3\sigma$ significance. We use a Fisher analysis 
+images at $\gtrsim 3\sigma$ significance. 
+We use a Fisher analysis 
 to examine the constraints that could be placed on these parameters 
 in various scenarios and find that for large stellar cores, both 
 the core size and the mass of the central SMBHs can be accurately 
-measured. We also study the prospects for detecting binary SMBHs 
+measured. 
+We also study the prospects for detecting binary SMBHs 
 with such observations and find that only under rare conditions and 
 with very long integrations ($\sim$40-hr) the masses of both SMBHs 
 may be measured using the distortions of central images.
@@ -136,7 +139,7 @@ In contrast to lensed quasars, the sources are extended over hundreds of parsecs
 We generated lensed images of background sources, predicted ALMA visibilities, and used them to estimate the detection significance of central images for various parameters. We simulated observations of a high-$J$ CO line. The line is assumed to have a velocity integrated flux of 1 Jy km/s and a FWHM of 400 km/s, resulting in an average flux of 2.5 mJy over a 400 km/s band, a typical value for high redshift, dusty galaxies \citep{Bothwell:12}. 
 
 We modeled the lens potential as a sum of three components: dark matter, stellar population and a single central SMBH. The dark matter component was modeled as \blue{an elliptical} singular power-law with a slope of 0.1, in agreement with the projected surface mass density of the NFW profile in the innermost regions \citep{Golse:02}. As  pointed out by \citet{Keeton:03}, due to its expected flatness in these regimes, the dark matter component has negligible influence on the central images (although models with dark matter cusps have been entertained). 
-The stellar population is modeled as \blue{an elliptical} cored power-law, $\Sigma(r)\propto (r^2+R_{\mathrm{core}}^2)^{\gamma_s}$. \blue{The deflection angles for elliptical cored power-law models were calculated using FastEll \citep{Barkana:98}.}  Figure \ref{fig2} shows the stellar component (red curve), dark matter component (black dashed curve) and the sum of the two (black solid curve). The grey dashed curves show a few examples of core-sersic models with parameters taken from \citet{Ferrarese:06}. Although the cored power-law model used in this work does not account for the slope of the stellar distribution below the core break, it is a close fit and a reasonable model to approximate the observed stellar light profiles in the inner few kpc. 
+The stellar population is modeled as \blue{an elliptical} cored power-law, $\Sigma(r)\propto (r^2+R_{\mathrm{core}}^2)^{\gamma_s}$. \blue{The deflection angles for elliptical cored power-law models were calculated using FASTELL \citep{Barkana:98}.}  Figure \ref{fig2} shows the stellar component (red curve), dark matter component (black dashed curve) and the sum of the two (black solid curve). The grey dashed curves show a few examples of core-sersic models with parameters taken from \citet{Ferrarese:06}. Although the cored power-law model used in this work does not account for the slope of the stellar distribution below the core break, it is a close fit and a reasonable model to approximate the observed stellar light profiles in the inner few kpc. 
 The black hole was modeled as a simple point mass at the center of the potential. 
 \blue{Lensing galaxies are typically massive ellipticals with velocity dispersions of order 200 km/s \citep[e.g.,][]{Sonnenfeld:13}. From the M-$\sigma$ relation, we predict that these galaxies should contain black holes with masses in excess of $2\times10^8 M_{\odot}$ \citep[e.g.,][]{Kormendy:13}. In our simulations we have chosen black holes with masses of 1, 2, and $4 \times 10^8 M_{\odot}$.}
 
